# CloudVPN

./: .dockerignore  .gitignore  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
authenticator/: .eslintrc.yml  Dockerfile  package.json  tsconfig.json
authenticator/config/: paths.js  webpack.config.js
authenticator/src/: index.ts
authenticator/src/api/token/: generateToken.ts  index.ts
authenticator/src/authentication/: getToken.ts
authenticator/src/config/: Config.ts  index.ts
docker/: docker-compose.yml
endpoint/: .dockerignore  Dockerfile  package copy.json  package.json
endpoint/config/: paths.js  webpack.config.js
endpoint/src/: index.ts
endpoint/src/api/: index.ts
endpoint/src/authentication/: index.ts
entrypoint/: .eslintrc.yml  CMakeLists.txt  Dockerfile  package.json  tsconfig.json
entrypoint/config/: webpack.config.dev.js  webpack.config.prod.js
entrypoint/include/: CloudVPN.config.h.in  RequestToken.h  StreamEncoder.h
entrypoint/src/: base64.cpp  base64.h  index.ts  main.cpp
entrypoint/src/Encryption/: RequestToken.cpp  StreamEncoder.cpp  httpRequest.cpp  httpRequest.h
entrypoint/src/Server/: EndpointSocket.cpp  EndpointSocket.h  TCP.cpp  TCP.h
